syntax = "proto3";

package teleport.certificate.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/certificate/v1;certificatev1";

// X.509 certificate marshaled in PEM form.
message X509Certificate {
  string pem = 1;
}
